--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             hunger.
           </p>
         </div>
-        <div id="tribute-info">
+        <div id="tribute-detail">
           <h3>Here's a time line of Dr. Borlaug's life:</h3>
           <ul>
             <li>
